yaz4j 1.6.0 doc updates